[gd_scene load_steps=5 format=2]

[ext_resource path="res://assets/scripts/environment/object/dynamic/bullet/Bullet.gd" type="Script" id=1]
[ext_resource path="res://assets/sprites/environment/object/dynamic/bullet/bullet.png" type="Texture" id=2]

[sub_resource type="SpriteFrames" id=1]
animations = [ {
"frames": [ ExtResource( 2 ) ],
"loop": false,
"name": "shoot",
"speed": 0.0
} ]

[sub_resource type="RectangleShape2D" id=2]
extents = Vector2( 4, 1 )

[node name="Bullet" type="Area2D"]
collision_layer = 32
collision_mask = 119
script = ExtResource( 1 )

[node name="AnimatedSprite" type="AnimatedSprite" parent="."]
frames = SubResource( 1 )
animation = "shoot"

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource( 2 )

[node name="BULLET_DISTANCE" type="Timer" parent="."]
wait_time = 2.0
one_shot = true

[node name="VisibilityNotifier2D" type="VisibilityNotifier2D" parent="."]
position = Vector2( 6, 9 )
rect = Rect2( -10, -10, 8, 2 )
[connection signal="body_entered" from="." to="." method="_on_Bullet_body_entered"]
[connection signal="timeout" from="BULLET_DISTANCE" to="." method="_on_BULLET_DISTANCE_timeout"]
[connection signal="screen_exited" from="VisibilityNotifier2D" to="." method="_on_VisibilityNotifier2D_screen_exited"]
